[package]
name = "wei-download"
version = "0.1.2"
edition = "2021"
description = "wei download"
documentation = "https://github.com/zuiyue-com/wei-download"
homepage = "https://github.com/zuiyue-com/wei-download"
license = "MIT OR Apache-2.0"

[dependencies]
wei-run = "0.2.5"
wei-env = "0.2.13"
wei-log = "0.2.10"
serde = "1"
serde_json = "1"
serde_derive = "1"
base64 = "0.13"
ureq = { version = "2.9.1", features = ["json"] }
single-instance = "0.3"